# dinesh-git17

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/auditing-workflow-security/: SKILL.md
.claude/skills/enforcing-brand-voice/: SKILL.md
.claude/skills/governing-readme-structure/: SKILL.md
.claude/skills/synchronizing-portfolio-state/: SKILL.md
.github/scripts/: __init__.py  fetch_github_activity.py  fetch_wakatime.py  generate_svgs.py
.github/workflows/: ci.yml  profile-update.yml  update-profile.yml  update-readme.yml  update-uptime.yml
assets/templates/: activity-circuit.svg.j2  btn-email.svg.j2  btn-linkedin.svg.j2  btn-portfolio.svg.j2  now-coding.svg.j2  project-grid.svg.j2  stack-ticker.svg.j2  system-identity.svg.j2  terminal-header.svg.j2
content/: about.yml  connect.yml  enjoy.yml  system_info.yml  tech_stack.yml
docs/superpowers/specs/: 2026-04-26-dashboard-animation-design.md
scripts/: __init__.py  build_dashboard.py  build_dashboard_footer.py  build_dashboard_top.py  update_dashboard.py  update_stats_cache.py  update_uptime.py
scripts/lib/: __init__.py  dashboard_layout.py  grading.py  http.py  patches.py  svg_animation.py  svg_markers.py  svg_primitives.py  text_to_path.py
scripts/lib/sources/: __init__.py  github_contrib.py  github_stats.py  uptime.py  wakatime.py
scripts/tests/: conftest.py  test_build_dashboard.py  test_build_dashboard_footer.py  test_build_dashboard_top.py  test_github_contrib.py  test_github_stats.py  test_grading.py  test_http.py  test_patches.py  test_svg_animation.py  test_svg_markers.py  test_text_to_path.py  test_update_dashboard.py  test_uptime.py  test_wakatime.py
tools/: protocol-zero.sh
