[project]
name = "dinesh-git17"
version = "0.1.0"
description = "Self-updating GitHub profile dashboard rendered as an SVG."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dinesh Dawonauth", email = "info@dineshd.dev" }]
dependencies = [
    "fonttools>=4.62",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.14",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "D", "UP", "ANN", "ASYNC", "S", "B", "A", "C4",
    "DTZ", "EM", "FA", "ISC", "ICN", "LOG", "G", "PIE", "T20", "PT", "Q",
    "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL",
    "TRY", "FLY", "PERF", "FURB", "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/tests/**/*" = [
    "S101",   # asserts are pytest's idiom
    "S106",   # fake tokens in mock calls
    "D",      # test names are self-documenting
    "ANN",    # test signatures are pytest-driven
    "PLR2004", # magic values in parametrize and asserts are intentional
    "PLR0913", # test factories aggregate many fixtures
    "ARG001", # mock callables match real signatures
    "ARG005", # lambda stubs match real signatures
    "PERF401", # perf irrelevant in tests
    "SIM117", # nested `with` is clearer in some test setups
    "SLF001",
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
python_executable = ".venv/bin/python"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = ["fontTools.*"]
ignore_missing_imports = true
